# nyctos

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MIGRATE-REPO-ROOT.md  README.md  SECURITY.md  SUPPORT.md  clippy.toml  lints.toml  nyctos.toml  nyx-agent.toml  nyx_exploration.sentinel  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/nyctos/: Cargo.toml  nyx_exploration.sentinel
crates/nyctos-ai/: Cargo.toml
crates/nyctos-ai/src/: lib.rs  runtime.rs
crates/nyctos-ai/tests/: claude_code_integration.rs
crates/nyctos-api/: Cargo.toml
crates/nyctos-api/src/: integrations.rs  lib.rs  router.rs  state.rs  webhook.rs
crates/nyctos-api/tests/: api.rs
crates/nyctos-core/: Cargo.toml
crates/nyctos-core/migrations/: 0001_v1.sql  0002_attack_graph.sql  0003_business_logic_templates.sql  0003_verifier_blob.sql  0004_launch_profile_hooks.sql  0004_run_findings.sql  0005_candidate_trace_id.sql  0005_project_integrations.sql  0006_run_repo_outcomes.sql  0007_project_runtime_profile.sql  0008_product_reset.sql
crates/nyctos-core/src/: config.rs  event_log.rs  ids.rs  lib.rs  log_init.rs  secrets.rs  state.rs
crates/nyctos-nyx/: Cargo.toml
crates/nyctos-nyx/src/: diag.rs  error.rs  lane.rs  runner.rs
crates/nyctos-nyx/tests/: runner.rs
crates/nyctos-sandbox/: Cargo.toml
crates/nyctos-sandbox/src/: chain_runner.rs  lib.rs  payload_runner.rs  shim.rs  workspace.rs
crates/nyctos-sandbox/tests/: env_builder.rs  escape.rs
crates/nyctos-types/: Cargo.toml
crates/nyctos-types/src/: agent.rs  api.rs  attack_graph.rs  business_logic.rs  chain.rs  event.rs  finding.rs  integration.rs  lib.rs  live_plan.rs  payload.rs  product.rs  project.rs  repo.rs  run.rs  spec.rs  trace.rs
crates/nyctos/src/: ai_pipeline.rs  attacker_playbooks.rs  auth_sessions.rs  auth_setup_ai.rs  banner.rs  business_logic_templates.rs  candidate_sources.rs  launch.rs  live_planning.rs  main.rs  node_runtime.rs  pentest_tools.rs  project_setup_ai.rs  remediation_ai.rs  route_model.rs  scheduler.rs  seed_setup_ai.rs
crates/nyctos/tests/: pr_comment_dedup.rs  scan_cli.rs
crates/nyx-agent/: Cargo.toml  README.md  nyx_exploration.sentinel
crates/nyx-agent-ai/: Cargo.toml  README.md
crates/nyx-agent-ai/src/: lib.rs  runtime.rs
crates/nyx-agent-ai/tests/: claude_code_integration.rs
crates/nyx-agent-api/: Cargo.toml  README.md
crates/nyx-agent-api/src/: integrations.rs  lib.rs  router.rs  state.rs  webhook.rs
crates/nyx-agent-api/tests/: api.rs
crates/nyx-agent-core/: Cargo.toml  README.md
crates/nyx-agent-core/.sqlx/: query-03e2cc8062683ec1e4301fe671a5e66a39d37e5d58cea9d2b47a7a9fc7881b63.json  query-0c16ae7e0a4cd791589a08116a2e07f161ac48fea4f5465db01154ccf386437d.json  query-0ef171bca324cf03933da41b93dc74f9cde907e097b1de63b47c4a6e7933c080.json  query-1c811ee10fca24b6457f4bff7e30147a99e4ca021fa9214a1aeca85ed85b6dbb.json  query-1d92d5efe3bb2550434ae746b22a898cb700cc286571d51fc2f91b00e1d15874.json  query-21927ba0adef8dbee0a4442cd3e9ee697e6c110384647ba0b7461f9c821c9282.json  query-25af64365d30f21e961b0dde4b027f9d09b4df27be76e0cb7857140d41a2a33c.json  query-2d1a7098db253bcc62b9ef6f4dc0d68ff0d3f6bc2cf4ddd027ec914b56aa4055.json  query-2e8fe7e434a09a82c8f1d658f6c325836962d4cc26df0ea2b7f5d185547fe504.json  query-30c9eb94348ffa712739024f60caa9c358ad8bdfe625308ea7c1e9763856189b.json  query-34d75a2996e89685074bc321ff1d60673447e72229797752e731027ddf625d88.json  query-4ef6ef4404e6007cbdd62e4f7f122701c7a61ab5c7e2038305c24cf12eb69e1c.json  query-52e416c6cc8a1e41fb7bc2cc4d5a7954a8ca582c9a2ef0c0afc4e35ec4012873.json  query-5799ffc55782bd4efbbc0ef7a1eac3caebcc218a55bf2afaf90e15ea7713f6ff.json  query-6417ed4e4179fceb5728dd23bd0baf26a76e15d17d3005709d5d5a18c3dd47f6.json  query-676e9fbb33280b630f92a351eb6b3c9509ceef8dd3b214ecbc4d968a8f8944ff.json  query-7116373aeecd689ab52c8fc133fb4e39133e7d2f4f3bf01dd247278d3fe1a315.json  query-75e1daae1dbb9fed4eff77e60c068eef7862f55e09ee03df6b5c9c2d0ad02a45.json  query-7eda8f0a56f13f83115f4a576da87699aed2420ec8d30c87d8e769f8f5fda3cc.json  query-8e897d53feeb29a069138134d37884055725683c95a4ed116eab53dfe7e2e5af.json  query-a91bbb9b305fe7b1305890cf0ff7daef8ce283adf50f94533d206650eeaefd32.json  query-aa8c67a219a54d3625d9b972f1c4a2a6db80a03a79092db65426884b2271846f.json  query-b5c81071588438a57b29815e6bac6d81b3bfb2dd8bbd89407188535d4b85d1f7.json  query-d0e898035d19e7fc169442859decbd960ccecb38ab6b549194ce00f8fc0d3753.json  query-e2298507db4f223274bffcb429bd8ca24bb413cc92918f9cdd78c10a08c6331e.json  query-e4abf95bec7296195615bcf4649d037d50d9150c6ca3beb3f02454fc8710827a.json  query-e53d484b71e118da8fba7a47ec5acc8ab8c95f3a9f1b8b0e00ca33b13220553e.json  query-e9d86bab3fe0c83ac3a81bb09136d42901ae6268621d8b5b740040d3986578a5.json  query-ed772ef800d5503a9f9cd920f8534682a625453150ef63c567242a707051bc24.json  query-f4c84934d91efbed12edfc329e31e87e34b0f9415b27a1cda97198bd7bc08d03.json  query-f9767dd951b3872a129a4d2c59958d7ee1665e4a839bf97abd0308bc80948b31.json  query-fb7894c3f62eac40a4ea2cd0c7f3daf9a37cad1baae0af855dcbd16c8392a1e5.json
crates/nyx-agent-core/migrations/: 0001_v1.sql  0002_specs.sql
crates/nyx-agent-core/src/: config.rs  event_log.rs  ids.rs  lib.rs  log_init.rs  secrets.rs  state.rs  time.rs
crates/nyx-agent-nyx/: Cargo.toml  README.md
crates/nyx-agent-nyx/src/: diag.rs  error.rs  harness_spec.rs  lane.rs  lib.rs  runner.rs
crates/nyx-agent-nyx/tests/: runner.rs
crates/nyx-agent-sandbox/: Cargo.toml  README.md
crates/nyx-agent-sandbox/src/: chain_runner.rs  lib.rs  payload_runner.rs  shim.rs  workspace.rs
crates/nyx-agent-sandbox/tests/: env_builder.rs  escape.rs
crates/nyx-agent-types/: Cargo.toml  README.md  build.rs
crates/nyx-agent-types/src/: agent.rs  api.rs  attack_graph.rs  budget.rs  business_logic.rs  chain.rs  event.rs  finding.rs  integration.rs  lib.rs  live_plan.rs  repo.rs  (+8 more)
crates/nyx-agent-ui/: Cargo.toml  README.md  build.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_toml.rs  harness_spec_json.rs  live_plan_json.rs
xtask/: Cargo.toml
xtask/src/: lint_instrument.rs  main.rs
(+355 files in other folders)
