[workspace]
resolver = "2"
members = [
    "crates/nyctos",
    "crates/nyctos-types",
    "crates/nyctos-core",
    "crates/nyctos-nyx",
    "crates/nyctos-ai",
    "crates/nyctos-sandbox",
    "crates/nyctos-api",
    "crates/nyctos-ui",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "LicenseRef-PolyForm-Small-Business-1.0.0"
repository = "https://github.com/nyx/nyx-pro"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tokio-tungstenite = "0.24"
webbrowser = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
toml = "0.8"
dirs = "5"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rust-embed = "8"
rayon = "1"
ts-rs = "10"
utoipa = "5"
semver = "1"
tempfile = "3"
which = "6"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "linux-native-sync-persistent", "windows-native", "crypto-rust"] }
rand = "0.8"
hex = "0.4"
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
regex = "1"
serde_yaml = "0.9"
tar = { version = "0.4", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
