[workspace]
resolver = "2"
members = [
    "crates/nyctos",
    "crates/nyctos-types",
    "crates/nyctos-core",
    "crates/nyctos-nyx",
    "crates/nyctos-ai",
    "crates/nyctos-sandbox",
    "crates/nyctos-api",
    "crates/nyctos-ui",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "LicenseRef-PolyForm-Small-Business-1.0.0"
repository = "https://github.com/nyctos/nyctos"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tokio-tungstenite = "0.29.0"
webbrowser = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
anyhow = "1"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
toml = "1.0.7"
dirs = "6.0.0"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json"] }
rust-embed = "8"
rayon = "1"
ts-rs = "12.0.1"
utoipa = "5"
semver = "1"
tempfile = "3"
which = "8.0.2"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "linux-native-sync-persistent", "windows-native", "crypto-rust"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "ring", "rustls-platform-verifier"] }
rand = "0.9.4"
hex = "0.4"
cron = "0.16.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2"
regex = "1"
serde_norway = "0.9"
ignore = "0.4"
tar = { version = "0.4", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
