[package]
name = "nyctos-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nyctos-core = { path = "../crates/nyctos-core" }
nyctos-nyx = { path = "../crates/nyctos-nyx" }
nyctos-types = { path = "../crates/nyctos-types" }
serde_json = "1"

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "harness_spec_json"
path = "fuzz_targets/harness_spec_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_plan_json"
path = "fuzz_targets/live_plan_json.rs"
test = false
doc = false
bench = false
