[package]
name = "nyx-agent-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nyx-agent-core = { path = "../crates/nyx-agent-core" }
nyx-agent-nyx = { path = "../crates/nyx-agent-nyx" }
nyx-agent-types = { path = "../crates/nyx-agent-types" }
serde_json = "1"

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "harness_spec_json"
path = "fuzz_targets/harness_spec_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_plan_json"
path = "fuzz_targets/live_plan_json.rs"
test = false
doc = false
bench = false
