[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
nyx-agent-types = { path = "../crates/nyx-agent-types" }
ts-rs = { workspace = true }
