[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
nyx-agent-types = { path = "../crates/nyx-agent-types" }
ts-rs = { workspace = true }
syn = { version = "2", features = ["full", "visit", "parsing", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
