[package]
name = "nyctos-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nyctos-core = { path = "../nyctos-core" }
nyctos-sandbox = { path = "../nyctos-sandbox" }
nyctos-types = { path = "../nyctos-types" }
anyhow = { workspace = true }
async-stream = "0.3"
axum = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
