[package]
name = "nyctos-nyx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nyctos-core = { path = "../nyctos-core" }
nyctos-types = { path = "../nyctos-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
