[package]
name = "nyctos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nyctos"
path = "src/main.rs"

[dependencies]
nyctos-ai = { path = "../nyctos-ai" }
nyctos-api = { path = "../nyctos-api" }
nyctos-core = { path = "../nyctos-core" }
nyctos-nyx = { path = "../nyctos-nyx" }
nyctos-sandbox = { path = "../nyctos-sandbox" }
nyctos-types = { path = "../nyctos-types" }
nyctos-ui = { path = "../nyctos-ui" }
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cron = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
nyctos-core = { path = "../nyctos-core", features = ["test-util"] }
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6"
