[package]
name = "nyx-agent-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nyx-agent-nyx = { path = "../nyx-agent-nyx" }
nyx-agent-types = { path = "../nyx-agent-types" }
anyhow = { workspace = true }
async-trait = "0.1"
blake3 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
