[package]
name = "nyx-agent-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Implementation-detail AI runtime adapters, prompts, and automation helpers for nyx-agent."
readme = "README.md"
documentation = "https://docs.rs/nyx-agent-ai"
keywords = ["security", "pentest", "llm", "automation", "internal"]
categories = ["security", "development-tools", "web-programming::http-client", "asynchronous", "command-line-utilities"]

[dependencies]
nyx-agent-nyx = { workspace = true }
nyx-agent-types = { workspace = true }
async-trait = "0.1"
blake3 = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
