[package]
name = "nyx-agent-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Implementation-detail loopback HTTP API and WebSocket server for nyx-agent."
readme = "README.md"
documentation = "https://docs.rs/nyx-agent-api"
keywords = ["security", "pentest", "api", "websocket", "internal"]
categories = ["security", "development-tools", "web-programming::http-server", "web-programming::websocket", "network-programming"]

[dependencies]
nyx-agent-core = { workspace = true }
nyx-agent-sandbox = { workspace = true }
nyx-agent-types = { workspace = true }
anyhow = { workspace = true }
async-stream = "0.3"
axum = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
lettre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
