[package]
name = "nyx-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nyx-agent-types = { path = "../nyx-agent-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate", "chrono"] }
blake3 = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
