[package]
name = "nyx-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Implementation-detail config, state, persistence, and scan orchestration for nyx-agent."
readme = "README.md"
documentation = "https://docs.rs/nyx-agent-core"
keywords = ["security", "pentest", "config", "database", "internal"]
categories = ["security", "development-tools", "database", "config", "filesystem"]

[dependencies]
nyx-agent-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate", "chrono"] }
blake3 = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
keyring-core = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }

[features]
test-util = []

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
