[package]
name = "nyx-agent-nyx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Implementation-detail subprocess driver for the upstream nyx static scanner."
readme = "README.md"
documentation = "https://docs.rs/nyx-agent-nyx"
keywords = ["security", "pentest", "scanner", "static-analysis", "internal"]
categories = ["security", "development-tools", "command-line-utilities", "parser-implementations", "text-processing"]

[dependencies]
nyx-agent-core = { workspace = true }
nyx-agent-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
