[package]
name = "nyx-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nyx-agent"
path = "src/main.rs"

[dependencies]
nyx-agent-api = { path = "../nyx-agent-api" }
nyx-agent-core = { path = "../nyx-agent-core" }
nyx-agent-nyx = { path = "../nyx-agent-nyx" }
nyx-agent-types = { path = "../nyx-agent-types" }
nyx-agent-ui = { path = "../nyx-agent-ui" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
