[package]
name = "nyx-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local-first application security agent for live pentesting, verified findings, and an embedded dashboard."
readme = "README.md"
documentation = "https://nyxsec.dev/docs/agent"
keywords = ["security", "pentest", "vulnerability", "scanner", "dashboard"]
categories = ["security", "command-line-utilities", "development-tools", "web-programming::http-server", "network-programming"]
default-run = "nyx-agent"
exclude = ["nyx_exploration.sentinel", ".DS_Store"]

[[bin]]
name = "nyx-agent"
path = "src/main.rs"

[dependencies]
nyx-agent-ai = { workspace = true }
nyx-agent-api = { workspace = true }
nyx-agent-core = { workspace = true }
nyx-agent-nyx = { workspace = true }
nyx-agent-sandbox = { workspace = true }
nyx-agent-types = { workspace = true }
nyx-agent-ui = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cron = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
webbrowser = { workspace = true }
which = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
nyx-agent-core = { workspace = true, features = ["test-util"] }
predicates = "3"
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6"
